# AlphaDraw

./: .gitignore
notebook/: .gitignore  index.html
notebook/css/: main.css
notebook/src/: index.ts
rust-native/: Cargo.toml
rust-pathfinder/: Cargo.toml
rust-pathfinder/resources/src/: embedded.rs  fs.rs
rust-pathfinder/src/: app.rs  main.rs  prelude.rs
rust-pathfinder/src/app/: types.rs
rust-pathfinder/src/engine/: camera.rs  device.rs  mod.rs  renderer.rs  ui.rs  view.rs  window.rs
rust-runtime/: Cargo.toml
rust-runtime/scripts/: build.sh  watch.sh
rust-runtime/src/: lib.rs
rust-webgpu/: Cargo.toml
rust-webgpu/assets/shaders/: shader.wgsl
rust-webgpu/src/: main.rs
skia-client/: Cargo.toml
web-client/: .gitignore  Cargo.toml  index.html  main.ts  package.json  run.sh  tsconfig.json  webpack.config.js
web-client/client/: index.html  pkg
web-client/css/: main.css
web-client/scripts/: clear.sh  open.sh  server.sh  watch.sh
web-client/src/: backup.txt  data.rs  lib.rs  main.ts
