[package]
name = "rust-pathfinder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winit = "0.24"
# futures = "0.3"
# wgpu = "0.8.1"
# wgpu_glyph = "0.12.0"
color-backtrace = "0.5.1"
foreign-types = "0.3"
gl = "0.14"
metal = "0.18"
objc = "0.2"
sdl2 = "0.33"
sdl2-sys = "0.33"
font-kit = "0.6"
jemallocator = "0.3"

clap = "2.32"
rayon = "1.0"
usvg = "0.9"

pathfinder_canvas = {git = "https://github.com/servo/pathfinder/", features = ['pf-text']}
pathfinder_color = {git = "https://github.com/servo/pathfinder/"}
pathfinder_content = {git = "https://github.com/servo/pathfinder/"}
pathfinder_geometry = {git = "https://github.com/servo/pathfinder/"}
pathfinder_gl = {git = "https://github.com/servo/pathfinder/"}
pathfinder_gpu = {git = "https://github.com/servo/pathfinder/"}
pathfinder_metal = {git = "https://github.com/servo/pathfinder/"}
pathfinder_renderer = {git = "https://github.com/servo/pathfinder/"}
pathfinder_resources = {git = "https://github.com/servo/pathfinder/"}
pathfinder_ui = {git = "https://github.com/servo/pathfinder/"}
pathfinder_export = {git = "https://github.com/servo/pathfinder/"}
pathfinder_svg = {git = "https://github.com/servo/pathfinder/"}


lazy_static = "1"
nfd = "0.0.4"
pretty_env_logger = "0.4"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.winit]
# version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105
version = "0.24.0"

[patch.crates-io]
pathfinder_geometry = {git = "https://github.com/servo/pathfinder/"}
pathfinder_simd = {git = "https://github.com/servo/pathfinder/"}

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.3"
io-surface = "0.12"
metal = "0.18"
objc = "0.2"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.log]
version = "0.4"


[dependencies.surfman]
version = "0.4.3"
# git = "https://github.com/servo/surfman"
# rev = "f3df871ac8c3926fe9106d86a3e51e20aa50d3cc"
features = ["sm-winit", "sm-x11"]


