[package]
name = "rust-webgpu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.1"
pollster = "0.2.4"
lyon = {version = "0.17.5", features = ["extra"]}
wgpu = "0.8.1"
winit = "0.23"
futures = "0.3.5"
bytemuck = "1.2.0"

