[package]
name = "ink-engine"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
cubic_spline = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'DomRect',
]


# [dependencies]
# wasm-bindgen = "0.2.73"
# wasm-bindgen-futures = "0.4.23"
# num = "0.4.0"
# either = "1.6.1"
# console_error_panic_hook = "0.1.6"
# serde = {version = "1.0.125", features = ["derive", "rc"]}
# serde_json = "1.0.64"
# futures = "0.3.14"
# js-sys = "0.3.50"

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#     'console',
#     'CanvasRenderingContext2d',
#     'Document',
#     'Element',
#     'HtmlElement',
#     'HtmlCanvasElement',
#     'EventTarget',
#     'Event',
#     'HtmlCollection',
#     'Node',
#     'NodeList',
#     'HtmlInputElement',
#     'HtmlStyleElement',
#     'Text',
#     'CharacterData',
#     'History',
#     'Location',
#     'Storage',
#     'Window',
#     'StyleSheet',
#     'CssStyleSheet',
#     'DomTokenList',
# ]
